--- a/app/sass/ui/_input.scss
+++ b/app/sass/ui/_input.scss
@@ -226,6 +226,7 @@
   box-shadow: 0px 16px 50px rgba(0, 0, 0, 0.2);
   padding: 16px 16px 12px 16px;
   margin: 0 0 0 0;
+  z-index: 20 !important;
 }
 .ui-datepicker-current {
   display: none;
