--- a/app/sass/ui/_btns.scss
+++ b/app/sass/ui/_btns.scss
@@ -126,8 +126,18 @@ input[type='submit'] {
   }
 }
 .btn-basket-icon {
-  width: 17px;
-  height: 20px;
+  width: 20px;
+  height: 24px;
+}
+.btn-basket-counter {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 4px;
+  display: block;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1;
 }
 .btn-heart {
   display: none !important;
