--- a/app/sass/pages/_catalog_page.scss
+++ b/app/sass/pages/_catalog_page.scss
@@ -50,6 +50,7 @@
 .catalog-header {
   display: table;
   width: 100%;
+  z-index: 4;
   @media screen and (min-width: $tablet-bp) {
     position: relative;
   }
