--- a/app/sass/pages/_main_page.scss
+++ b/app/sass/pages/_main_page.scss
@@ -6,7 +6,7 @@
 .container-mp {
   padding: 64px 0 45px 0;
   @media screen and (min-width: $tablet-bp) {
-    padding: 64px 10px 45px 10px;
+    padding: 80px 10px 45px 10px;
   }
 }
 .frame-item {
@@ -34,6 +34,9 @@
     );
   }
 }
+.frame-item--promo {
+  padding: 20px;
+}
 .frame-item-mark {
   position: absolute;
   top: 34px;
@@ -47,7 +50,7 @@
 }
 .frame-item-inner {
   position: relative;
-  z-index: 2;
+  // z-index: 2;
 }
 .frame-item-title {
   font-weight: bold;
@@ -237,4 +240,82 @@ html,
   &:hover {
     color: rgba($color: $black, $alpha: 0.6);
   }
+}
+.сountdown-wrapper {
+  display: flex;
+  justify-content: space-between;
+  max-width: 350px;
+}
+.сountdown-wrapper--promo {
+  margin: 0 auto 20px auto;
+}
+.сountdown-wrapper--catalog {
+  margin: 40px auto 20px auto;
+}
+.countdown-item {
+  white-space: nowrap;
+  text-align: center;
+}
+.countdown-item-sep {
+  color: #000;
+  font-size: 26px;
+  font-family: $lato;
+}
+.countdown-number {
+  position: relative;
+  display: inline-block;
+  background-color: #000;
+  color: #fff;
+  mix-blend-mode: multiply;
+  padding: 4px 8px;
+  border-radius: 6px;
+  font-size: 24px;
+  line-height: 1;
+  font-family: $lato;
+  min-width: 29px;
+  min-height: 32px;
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 1px;
+    background-color: #000;
+  }
+  @media screen and (min-width: $tablet-bp) {
+    font-size: 16px;
+    min-width: 21px;
+    min-height: 28px;
+    padding: 6px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 24px;
+    min-width: 29px;
+    min-height: 32px;
+    padding: 4px 8px;
+  }
+}
+.countdown-text {
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+}
+.frame-item-promo-text {
+  font-size: 30px;
+  line-height: 1.3;
+  text-align: center;
+  margin-bottom: 30px;
+  strong {
+    font-weight: normal;
+    font-size: 42px;
+    color: #000;
+  }
+}
+.btn-white--promo {
+  display: block;
+  margin: 0 auto;
+  max-width: 182px;
 }
