--- a/app/sass/pages/_catalog_page.scss
+++ b/app/sass/pages/_catalog_page.scss
@@ -380,3 +380,12 @@
   white-space: nowrap;
   text-decoration: underline;
 }
+.сountdown-wrapper--catalog {
+  margin: 0 auto 20px auto;
+}
+.catalog-promo-title {
+  text-align: center;
+  font-size: 26px;
+  margin: 20px 0;
+  line-height: 1.3;
+}
