--- a/app/sass/pages/_catalog_page.scss
+++ b/app/sass/pages/_catalog_page.scss
@@ -380,12 +380,37 @@
   white-space: nowrap;
   text-decoration: underline;
 }
-.сountdown-wrapper--catalog {
-  margin: 0 auto 20px auto;
-}
 .catalog-promo-title {
   text-align: center;
-  font-size: 26px;
+  font-size: 40px;
   margin: 20px 0;
-  line-height: 1.3;
+  line-height: 1.2;
+}
+.сountdown-wrapper--catalog {
+  margin: 0 auto 20px auto;
+  max-width: 470px;
+  .countdown-item-sep {
+    line-height: 1;
+    @media screen and (min-width: 400px) {
+      font-size: 40px;
+    }
+  }
+  .countdown-number {
+    padding: 4px 8px;
+    font-size: 24px;
+    min-width: 29px;
+    min-height: 32px;
+    @media screen and (min-width: 400px) {
+      font-size: 40px;
+      min-width: 30px;
+      min-height: 42px;
+      padding: 4px 8px;
+    }
+    @media screen and (min-width: $tablet-bp) {
+      font-size: 40px;
+      min-width: 30px;
+      min-height: 42px;
+      padding: 4px 8px;
+    }
+  }
 }
