--- a/app/sass/pages/_main_page.scss
+++ b/app/sass/pages/_main_page.scss
@@ -35,7 +35,7 @@
   }
 }
 .frame-item--promo {
-  padding: 20px;
+  padding: 50px 20px;
 }
 .frame-item-mark {
   position: absolute;
@@ -247,7 +247,7 @@ html,
   max-width: 350px;
 }
 .сountdown-wrapper--promo {
-  margin: 0 auto 20px auto;
+  margin: 0 auto 10px auto;
 }
 
 .countdown-item {
@@ -268,6 +268,7 @@ html,
   padding: 4px 8px;
   border-radius: 6px;
   font-size: 24px;
+  font-weight: bold;
   line-height: 1;
   font-family: $lato;
   min-width: 29px;
@@ -309,9 +310,9 @@ html,
 }
 .frame-item-promo-text {
   font-size: 30px;
-  line-height: 1.3;
+  line-height: 1.1;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   @media screen and (min-width: 400px) {
     font-size: 32px;
   }
